Changes: - Favicon - CSS for login page.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,60 +1,1 @@
-* {
-    font-family: 'Poppins';
-    padding: 20px;
-}
-
-body {
-    display: flex;
-    justify-content: flex-end;
-}
-
-#formsModal {
-    display: none; 
-    position: fixed; 
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    background: white; 
-    padding: 20px; 
-    box-shadow: 0px 0px 10px gray;
-    max-height: 900px;
-    max-width: 800px;
-    width: 70%;
-    overflow-y: auto;
-    text-align: left; 
-    flex-direction: column; 
-    align-items: center; 
-}
-
-#formsModal form {
-    width: 100%;
-    max-width: 600px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#formsModal input, #formsModal label, #formsModal p, #formsModal b, #formsModal h3  {
-    width: 100%;
-    text-align: left;
-}
-
-#close {
-    color: #aaaaaa;
-    font-size: 28px;
-    font-weight: bold;
-    align-self: flex-start; 
-}
-
-#close:hover,
-#close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-#loginforms {
-    margin: auto;
-    width: 50%;
-    padding: 10px;
-}
+@import './login/login.css';
