--- a/resources/css/login/login.css
+++ b/resources/css/login/login.css
@@ -1,17 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Della+Respira&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Permanent+Marker&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Mono+One&display=swap');
-
-* {
-    font-family: 'Poppins', sans-serif;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-body {
-    padding: 0;
-    margin: 0;
-    overflow-x: hidden;
-}
+@import '../app.css';
 
 
 .main {
@@ -142,8 +130,6 @@ body {
     color:#05492a;
 }
 
-
-
 #loginforms label {
     display: block;
     margin-bottom: 0.25rem;
@@ -238,6 +224,20 @@ body {
 .alert-box p {
     margin: 0 0 0 0;
     line-height: 1.5;
+}
+
+.remember-me input[type="checkbox"] {
+    width: 16px;  
+    height: 16px;
+    border: 2px solid #4CAF50;
+    border-radius: 4px;
+    cursor: pointer;
+    vertical-align: middle;
+    margin-right: 5px;
+}
+
+.remember-me input[type="checkbox"]:checked {
+    background-color: #4CAF50;
 }
 
 #openForms:hover {
