--- a/resources/css/login/login.css
+++ b/resources/css/login/login.css
@@ -116,7 +116,8 @@
     display: block;
     width: fit-content;
     margin-left: auto;
-    margin-right: auto;display: block;
+    margin-right: auto;
+    display: block;
     margin: 0 auto;
 }
 
@@ -173,6 +174,18 @@
     color: red;
 }
 
+#signup-btn {
+    width: 100%;
+    padding: 12px;
+    background: #00753F;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 500;
+    transition: background 0.3s ease;
+}
 
 #loginforms button {
     width: 100%;
@@ -320,13 +333,18 @@
 .name-fields {
     display: flex;
     gap: 1rem;
-    flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: space-between;
 }
 
+
 .name-field {
-    flex: 1;
+    flex: 1 1 0;
+    min-width: 0;
+}
+
+.name-field input {
+    width: 100%;
+    box-sizing: border-box;
 }
 
 #formsModal button[type="submit"] {
@@ -466,3 +484,4 @@
         padding: 0;
     }
 }
+
