Added SignUp OTP Capabilities
* Migrated a new signup_otps table
* Modifed signup-form.blade.php to ensure that clicking signup redirects to otp page
* Added Signup OTP Routes in web.php
* Added new emai-signup-otp.blade.php for email view to be sent.
* Modified SingupFormsController.php, spliting recaptcha and singup up logic to ensure that after reCaptcha Verification
	it does not create the account without the otp verification. Also added resendOTP capabilities

* Added verify-otp.blade.php for the view. and yes it has to be a button for form submission
* Modified login.css to add styles to the resend otp button
*Added SignupOTP.php Model

Signed-off-by: Chai-09 <gabebarcenas01@gmail.com>

--- a/resources/css/login/login.css
+++ b/resources/css/login/login.css
@@ -501,3 +501,20 @@
     }
 }
 
+form.resend-otp-form button.resend-otp-fake-link {
+    all: unset !important;
+    color: #00753F !important;
+    cursor: pointer;
+    font-size: 0.9rem;
+    font-family: inherit;
+    text-decoration: underline;
+    display: inline;
+  }
+  
+  form.resend-otp-form button.resend-otp-fake-link:hover {
+    color: #05492a !important;
+  }
+  
+  
+  
+
