--- a/resources/css/fillupforms/fillupforms.css
+++ b/resources/css/fillupforms/fillupforms.css
@@ -9,3 +9,29 @@
 #mainForm {
     padding-top: 50px;
 }
+
+
+.alert-box {
+    background-color: #f8d7da;
+    color: #721c24;
+    border-radius: 6px;
+    padding: 15px;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.alert-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.alert-close {
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.border-danger {
+    border: 1px solid #dc3545 !important;
+}
