--- a/resources/css/fillupforms/fillupforms.css
+++ b/resources/css/fillupforms/fillupforms.css
@@ -15,10 +15,10 @@
     background-color: #f8d7da;
     color: #721c24;
     border-radius: 6px;
-    padding: 15px;
-    margin-bottom: 20px;
+    padding: 15px 20px;
     position: relative;
 }
+
 
 .alert-content {
     display: flex;
@@ -34,4 +34,89 @@
 
 .border-danger {
     border: 1px solid #dc3545 !important;
+}
+
+#alert-wrapper {
+    display: none;
+    max-width: 100%;
+    width: 100%;
+    padding: 0 4rem 0 4rem;
+    margin: 0 auto;
+}
+
+.autocomplete-wrapper {
+    position: relative;
+    width: 100%;
+}
+
+.custom-input {
+    width: 100%;
+    padding: 0.65rem 0.9rem;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 0.95rem;
+    transition: border-color 0.2s;
+}
+
+.custom-input:focus {
+    border-color: #4CAF50; /* green border on focus */
+    outline: none;
+}
+
+.custom-suggestions {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background: #fff;
+    border: 1px solid #ccc;
+    border-top: none;
+    border-radius: 0 0 6px 6px;
+    max-height: 200px;
+    overflow-y: auto;
+    z-index: 10;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.custom-suggestions li {
+    padding: 10px 15px;
+    cursor: pointer;
+}
+
+.custom-suggestions li:hover {
+    background-color: #f0f0f0;
+}
+
+.custom-next, .custom-submit, .custom-back {
+    padding: 0.6rem 1.5rem;
+    border-radius: 6px;
+    font-weight: 500;
+    border: none;
+    transition: background-color 0.2s;
+    font-size: 1rem;
+}
+
+/* Next and Submit Button */
+.step1-next-btn, .btn-submit {
+    height: 4em;
+    width: 10em;
+    background-color: #006c3c;
+    color: white;
+}
+.step1-next-btn:hover, .btn-submit:hover {
+    background-color: #004f2a;
+}
+
+/* Back Button */
+.step1-back-btn {
+    height: 4em;
+    width: 10em;
+    background-color: #ccc;
+    color: #333;
+}
+.step1-back-btn:hover {
+    background-color: #999;
 }
