Dynamid Sidebar Update: - Implemented a role based authenticator para malaman kung anong contents para sa role. - Nakalagay na sa administrator side. - Okay na rin yung logout.
Problem:
- Not yet sure kung saan ko ilalagay yung mga name and role sa sidebar.

Signed-off-by: neoninpaul <paulaeronguillermo@gmail.com>

--- a/resources/css/partials/sidebar.css
+++ b/resources/css/partials/sidebar.css
@@ -83,6 +83,9 @@ body {
   width: 100%;
 }
 
+#sidebar.collapsed .user-info {
+  display: none;
+}
 
 /* Collapsed Sidebar Hover */
 #sidebar.collapsed #sidebar-content .nav-link:hover {
