--- a/resources/css/fillupforms/fillupforms.css
+++ b/resources/css/fillupforms/fillupforms.css
@@ -19,6 +19,12 @@
     position: relative;
 }
 
+.server-alert-wrapper {
+    max-width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+    margin: 0 auto 1.5rem auto;
+}
 
 .alert-content {
     display: flex;
