--- a/resources/css/applicants/sidebar.css
+++ b/resources/css/applicants/sidebar.css
@@ -93,4 +93,25 @@
     }
 }
 
-/* 🔽 Mobile (when included in navbar collapse) */
+.sidebar-nav .nav-link.active,
+.sidebar-nav .nav-item.active .step-number {
+    background-color: white;
+    color: #00753F !important;
+}
+
+/* Completed step (not currently active) */
+.sidebar-nav .nav-link.completed {
+    color: #1f7e35 !important; /* Bootstrap success green */
+    font-weight: 500;
+}
+
+.sidebar-nav .nav-item.completed .step-number {
+    color: #1f7e35 ;
+}
+
+.sidebar-nav .nav-item.completed i {
+    color: #28a745;
+}
+
+
+
