Step 3 Front End Updates:
- Distinguished yung main, css, and js of the steps.
- Lininis ko yung format.
- Hindi final yung design. Parang hindi na need nung dot or yung your payment has been approved or declined text.

Signed-off-by: neoninpaul <paulaeronguillermo@gmail.com>

--- a/resources/css/applicants/sidebar.css
+++ b/resources/css/applicants/sidebar.css
@@ -103,7 +103,7 @@
 
 /* Sidebar Complete */
 .sidebar-nav .nav-item.completed .nav-link {
-    color: #00753F !important; 
+    color: #00753F#00753F !important; 
     font-weight: 600;
 }
 
