Front End Update: - Changed yung step 2 alert. - Distinguished yung mga parts nung sa Part 4 (js, blade, css) - Design is not yet final, nag push lang kasi lilipat na ko computer.

--- a/resources/css/applicants/step-2.css
+++ b/resources/css/applicants/step-2.css
@@ -12,3 +12,9 @@
     padding-right: 2em;
 }
 
+.payment .alert-info {
+    background-color: #eaf8f0;
+    color: #00753F;
+    border: 1px solid #00753e75;
+}
+
