--- a/resources/css/partials/sidebar.css
+++ b/resources/css/partials/sidebar.css
@@ -124,6 +124,11 @@ body {
   cursor: pointer;
 }
 
+#sidebar-content .user-info {
+  display: flex;
+  flex-direction: column;
+}
+
 /* Logout */
 #sidebar-content .text-danger {
   font-weight: bold;
@@ -131,4 +136,35 @@ body {
   display: flex;
   align-items: center;
   gap: 15px;
+}
+
+.user-labels {
+  background-color: #b2be02;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: rgb(24, 117, 0);
+  font-size: 1rem;
+  line-height: 0.9;
+  word-break: break-word;
+  height: 7%; 
+  overflow: hidden;
+  padding: 4px;
+  text-align: center;
+  font-weight: 600;
+}
+
+.text-label {
+  opacity: 1;
+  width: auto;
+  transition: opacity 0.3s ease 0.3s, width 0.3s ease 0.3s; /* delayed entry */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+#sidebar.collapsed .text-label {
+  opacity: 0;
+  width: 0;
+  transition-delay: 0s;  
 }
