--- a/resources/css/applicants/step-3.css
+++ b/resources/css/applicants/step-3.css
@@ -1,56 +1,68 @@
-.status-dot {
+.payment-verify a {
+    color: #00753F;
+    text-decoration: none;
+}
+
+.payment-verify a:hover {
+    text-decoration: underline;
+}
+
+.payment-verify .status-dot {
     width: 12px;
     height: 12px;
     border-radius: 50%;
-    display: inline-block;
 }
 
-.payment-status-box {
-    width: 800px;
-    margin: 1.5rem auto;
+.payment-verify .alert.alert-info {
+    width: 100vw;
     padding: 1.5rem 2rem;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
-    background-color: #fefefe;
-    text-align: center;
-}
-
-.payment-status-box h5 {
-    font-size: 1.25rem;
-    margin-bottom: 1rem;
-    font-weight: bold;
-}
-
-.payment-status-box p {
-    font-size: 0.95rem;
-    color: #555;
-    font-style: italic;
-    margin: 0;
 }
 
 /* Denied styling */
-.payment-status-box.denied {
-    border-left: 6px solid #dc3545;
+.payment-verify .alert.alert-info.denied {
     background-color: #fdf0f0;
+    border-color: #dc3545;
     color: #dc3545;
 }
 
-.payment-status-box.denied h5 {
+.payment-verify .alert.alert-info.denied p {
+    font-size: 0.95rem;
+    color: #dc3545;
+    margin: 0.5em;
+}
+
+.payment-verify .alert.alert-info.denied a {
     color: #dc3545;
 }
+
 
 /* Approved styling */
-.payment-status-box.approved {
-    border-left: 6px solid #00753F;
+.payment-verify .alert.alert-info.approved {
     background-color: #eaf8f0;
+    border-color:#00753F;
     color: #00753F;
 }
 
-.payment-status-box.approved h5 {
+.payment-verify .alert.alert-info.approved p {
+    font-size: 0.95rem;
     color: #00753F;
+    margin: 0.5em;
 }
 
-.tamaraw-text {
+.payment-verify .alert.alert-info.approved a {
+    color: #00753F;
+    text-decoration: none;
+}
+
+.payment-verify .alert.alert-info.approved a:hover {
+    color: #025830;
+    text-decoration: underline;
+}
+
+
+.payment-verify .tamaraw-text {
     color: #00753F;
     font-weight: 600;
 }
