--- a/resources/css/applicants/step-2.css
+++ b/resources/css/applicants/step-2.css
@@ -18,3 +18,9 @@
     border: 1px solid #00753e75;
 }
 
+.payment input:focus,
+.payment select:focus {
+    border: 1px solid #00753F !important;
+    box-shadow: 0 0 0 2px rgba(0, 117, 63, 0.15);
+    outline: none;
+}
