Nalagay na yung sidebar sa admissions + fixed yung position.
Signed-off-by: neoninpaul <paulaeronguillermo@gmail.com>

--- a/resources/css/partials/sidebar.css
+++ b/resources/css/partials/sidebar.css
@@ -8,6 +8,7 @@ body {
 
 /* Sidebar overall */
 #sidebar {
+  position: fixed;
   min-height: 100vh;
   width: 250px;
   background: transparent; /* No background here */
