--- a/resources/css/accounting/table.css
+++ b/resources/css/accounting/table.css
@@ -80,3 +80,58 @@ input.form-control::placeholder {
     background-color: #dbdad7;
     color: #424242;
 }
+
+.filter-bar {
+  display: flex;
+  align-items: center;
+  background-color: #f8f9fa;
+  padding: 0.5rem 1rem;
+  border-radius: 0.375rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+  gap: 10px;
+}
+
+.table-design.container {
+  width: 100%;
+  max-width: 100%;
+}
+
+.table-design .form-input {
+  padding: 0.4rem 0.75rem;
+  font-size: 0.875rem;
+  border: 1px solid #ccc;
+  border-radius: 0.25rem;
+  width: 100%;
+}
+
+.table-design .search-input {
+    padding: 0.4rem;
+    padding-left: 2.2rem;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size:  .875rem;
+    width: 100%;
+}
+
+.table-design .form-select {
+  padding: 0.4rem 0.75rem;
+  font-size: 0.875rem;
+  border: 1px solid #ccc;
+  border-radius: 0.25rem;
+  width: 100%;
+}
+
+.table-design .search-wrapper {
+  position: relative;
+  width: 100%;
+  margin-bottom: 0;
+}
+
+.table-design .search-wrapper i {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #888;
+}
