--- a/resources/css/applicants/layout.css
+++ b/resources/css/applicants/layout.css
@@ -1,6 +1,9 @@
 @import '../app.css';
 
 .forms {
+    padding-top: 4rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
     min-height: 100vh;
     background-color: #FBFCF8 ;
 }
