--- a/resources/css/applicants/sidebar.css
+++ b/resources/css/applicants/sidebar.css
@@ -1,6 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Della+Respira&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Permanent+Marker&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap');
 @import '../app.css';
 
+.sidebar-nav-wrapper {
+    position: fixed;
+    top: 70px; 
+    left: 0;
+    background-color: white;
+}
+
+.navbar-open {
+    position: static;
+}
+
 .sidebar-nav {
     height: 100vh;
     padding: 20px 24px;
