--- a/resources/css/applicants/step-1.css
+++ b/resources/css/applicants/step-1.css
@@ -28,7 +28,6 @@
     gap: 1rem;
     margin-bottom: 1rem;
 }
-
 .form-col {
     flex: 1;
     min-width: 250px;
@@ -54,3 +53,42 @@
     background-color: #004f2a;
 }
 
+/* Recommender */
+
+
+.question-form {
+    padding-left: 1.2em;
+    padding-right: 1.2em;
+}
+
+
+.question-form h2 {
+    padding-top: 1em;
+}
+
+
+
+.recommender input[type="radio"] {
+    cursor: pointer;
+    margin-right: 0.5rem;
+}
+
+.recommender input[type="radio"]:checked {
+    border-color: #198754; 
+    background-color: #198754;
+}
+
+.recommender input[type="radio"]::after {
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background: white;
+    display: none;
+}
+
+.recommender input[type="radio"]:checked::after {
+    display: block;
+}
