Step 1 Applicant Front End Update! - Recommendation Modal - Sweet Alert before submitting - Linipat lahat ng js sa blade to fillupforms.js
Signed-off-by: neoninpaul <paulaeronguillermo@gmail.com>

--- a/resources/css/applicants/step-1.css
+++ b/resources/css/applicants/step-1.css
@@ -92,3 +92,9 @@
 .recommender input[type="radio"]:checked::after {
     display: block;
 }
+
+/* Recommender Output */
+
+.tamaraw-text {
+    color: #00753F;
+}
