--- a/resources/css/admission/edit-applicant.css
+++ b/resources/css/admission/edit-applicant.css
@@ -1,11 +1,31 @@
-/* .form-row {
+.form-row {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1rem;
+    gap: 1.5rem;
+    margin-bottom: 2rem;
 }
 
 .form-col {
+    flex: 1 1 calc(33.333% - 1rem); /* 3 columns */
+    display: flex;
+    flex-direction: column;
+    min-width: 300px;
+}
+
+.chart-card .card {
     flex: 1;
-    min-width: 250px;
-} */
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.chart-card .card-body {
+    flex: 1;
+    height: 300px;
+    position: relative;
+}
+
+.chart-card canvas {
+    width: 100% !important;
+    height: 100% !important;
+}
