--- a/resources/css/partials/layout.css
+++ b/resources/css/partials/layout.css
@@ -1,4 +1,13 @@
 #content {
+    background-color: #FBFCF8;
     max-width: 100%;
     width: 100%;
+    min-height: 100vh;
+}
+
+#alert-wrap {
+    display: none;
+    max-width: 100%;
+    width: 100%;
+    padding-bottom: 24px;
 }
