Update: - Change Applicant ID to Admission Number for exam attendance. - Change the color of recommender in navbar. - Added validation for age from 4 to 100 - Automatic na capital for nationality - Nullable ang lrn for all educational level
Signed-off-by: neoninpaul <paulaeronguillermo@gmail.com>

--- a/resources/css/applicants/navbar.css
+++ b/resources/css/applicants/navbar.css
@@ -119,3 +119,14 @@
     box-shadow: none;             
 }
 
+.d-lg-none .strand-link {
+    color: #fff !important;
+}
+
+.d-lg-none .strand-link:hover {
+    color: #b8eed6 !important;
+}
+
+.d-lg-none .strand-link i {
+    color: #fff !important;
+}
